# SpannedDrive

./: README.md  meson.build  org.avjeferson.SpannedDrive.json  requirements.txt
.flatpak-builder/cache/refs/heads/x86_64-org.avjeferson.SpannedDrive.json/: init
.flatpak-builder/checksums/: x86_64-org.avjeferson.SpannedDrive.json
data/: meson.build  org.avjeferson.SpannedDrive.appdata.xml.in  org.avjeferson.SpannedDrive.desktop.in  org.avjeferson.SpannedDrive.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gconstants.py  main.py  meson.build  newpartition.py  readwrite.py  settings.py  spanneddrive.gresource.xml  spanneddrive.in  utility.py  window.py
src/filecharacteristics/: ConfigurationFile.json  DriveFile.json  PartitionFile.json  RecentsFile.json  TokenFile.json
src/gtk/: help-overlay.ui  settings.ui  toolbar.ui  window.ui
